
[metadata]
name = tunman
author = RiotKit Collective
author_email = marek_andrzejczak@riseup.net
summary = Tunnel Manager. A supervisor for SSH tunnels, provides easy configuration, monitoring, flexibility, restarting
license = MIT
description-file = DESCRIPTION.rst
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/riotkit-org/reverse-networking
python_requires = >=3.5
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Topic :: System :: Systems Administration

[files]
packages = tunman

[entry_points]
console_scripts =
    tunman = tunman:main
